force-app/main/default/objects/Objective__c/fields/Date_Met__c.field-meta.xml
<CustomField>
    <fullName>Date_Met__c</fullName>
    <label>Date Met</label>
    <type>Date</type>
</CustomField>