force-app/main/default/objects/Objective__c/recordTypes/ExpTest.recordType-meta.xml
<RecordType>
    <fullName>ExpTest</fullName>
    <active>true</active>
    <description>Used by unit tests -- do not delete or modify</description>
    <label>ExpTest</label>
</RecordType>