force-app/main/default/objects/Objective__c/recordTypes/ExpTest2.recordType-meta.xml
<RecordType>
    <fullName>ExpTest2</fullName>
    <active>true</active>
    <description>Used by unit tests -- do not delete or modify</description>
    <label>ExpTest2</label>
</RecordType>